# clawmarks-lora

./: .gitignore  CLAUDE.md  clip_score.py  docker-compose.yml  pyproject.toml
notes/: build_coverage_map.py  build_elite_archive.py  build_explore_hub.py  build_lineage_view.py  build_map_view.py  build_novelty_decay.py  build_redundancy_view.py  build_scan_gallery.py  build_seed_browser.py  build_similarity_index.py  build_solution_map.py  build_thumbnails.py  build_uncanny_gallery.py  curation_server.py  lab_notebook.md  lab_notebook_archive.md  merge_round2.py  mmd_score.py  opencode_review.md  opencode_review_prompt.md  probe_power.py  run_uncanny_allnight.py  run_uncanny_allnight2.py  run_uncanny_sweep.py  shared_ui.py
tests/: conftest.py  test_atomic_io.py  test_cli.py  test_cockpit.py  test_comfyui.py  test_compare_page.py  test_comparison_sampler.py  test_config.py  test_coverage_focus_ui.py  test_coverage_map.py  test_curation_server.py  test_curation_server_active_leg.py  test_curation_server_cockpit_scoring.py  test_curation_server_compare_routes.py  test_curation_server_counterfactual_route.py  test_curation_server_error_page.py  test_curation_server_expedition_routes.py  test_curation_server_focus_routes.py  test_curation_server_gallery_route.py  test_curation_server_lazy_thumbnails.py  test_curation_server_manifest_cache.py  test_curation_server_manifest_only_routes_cache.py  test_curation_server_map_redundancy_cache.py  test_curation_server_preference_status_route.py  test_curation_server_real_thumbs.py  test_curation_server_scan_route.py  (+52 more)
(+71 files in other folders)
