[project]
name = "clawmarks"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pytest==9.1.0",
]

[project.scripts]
clawmarks = "clawmarks.cli:main"

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
