[project]
name = "clawmarks"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.0.0",
    "paramiko==5.0.0",
    "pillow==11.0.0",
    "scikit-learn==1.6.1",
    "torch==2.12.0",
    "transformers==4.56.0",
    "umap-learn==0.5.9.post2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.0",
]

[project.scripts]
clawmarks = "clawmarks.cli:main"

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
